# diogenes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: attacks.hpp  bitboard.hpp  board.hpp  evaluation.hpp  generator.hpp  gui.hpp  move.hpp  piece.hpp  search.hpp  stds.hpp  uci.hpp  utils.hpp
src/: attacks.cpp  bitboard.cpp  board.cpp  evaluation.cpp  generator.cpp  gui.cpp  main.cpp  move.cpp  search.cpp  uci.cpp  utils.cpp
test/: test-attacks.cpp  tests-bitboards.cpp  tests-board.cpp  tests-knight_king_attacks.cpp  tests-main.cpp  tests-move.cpp  tests-movegen.cpp  tests-pawn_attacks.cpp  tests-perft.cpp  tests-search.cpp  tests-sliding_attacks.cpp  tests-utils.cpp
